src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCORE__Billing_County__c</fullName>
        <inlineHelpText>County for Billing Address to be used in Avalara Tax Calculations if Billing Address selected as ship to address</inlineHelpText>
        <label>Billing County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Billing_Last_Validated__c</fullName>
        <inlineHelpText>Date and Time Billing Address was last validated.  Cannot Be Edited.</inlineHelpText>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__ExemptEntityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Type of Entity/Use Code, if any, assocaited with this Account. Optional Field.</inlineHelpText>
        <label>Entity/Use Code</label>
        <referenceTo>AVA_SFCORE__EntityUse__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Shipping_County__c</fullName>
        <inlineHelpText>County for Shipping Address to be used in Avalara Tax Calculations if Shipping Address selected as ship to address</inlineHelpText>
        <label>Shipping County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Shipping_Last_Validated__c</fullName>
        <inlineHelpText>Date and Time Shipping Address was last validated.  Cannot be Edited.</inlineHelpText>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Management_Type__c</fullName>
        <label>Account Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Maintained</fullName>
                </value>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Strategic (Target)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Oracle Assigned Account Number</description>
        <inlineHelpText>Oracle Number- 6 numeric digit
Use last name for new accounts</inlineHelpText>
        <label>Account Number (To Be Deleted)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Department__c</fullName>
        <formula>Owner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Department (To Be Deleted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Owner.FirstName  &amp;  &quot; &quot;  &amp;  Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_User_Department__c</fullName>
        <formula>Text(Owner.User_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_User_Division__c</fullName>
        <formula>Text(Owner.User_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner User Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Used by Owner Sales to identify Strategic, Growth &amp; New accounts for MAPS.</inlineHelpText>
        <label>MAPS Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dcw_DistChannels.dc_active_flag</description>
        <inlineHelpText>dcw_DistChannels.dc_active_flag</inlineHelpText>
        <label>Active (DCW)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>This field captures all removed fields values</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.  This will exclude them from Sales Use Tax calculations on proposals.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attack_Strategy__c</fullName>
        <description>Created for Strategic Accounts</description>
        <inlineHelpText>Attack Strategy</inlineHelpText>
        <label>Attack Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Account_Number__c</fullName>
        <description>An auto-number field used to create a unique identifier for each account.</description>
        <displayFormat>{00000}</displayFormat>
        <inlineHelpText>An auto-number field used to create a unique identifier for each account.</inlineHelpText>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSelfService3_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store branding theme set by admin for Self Service 3.0</description>
        <label>Self Service 3.0 Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountsThemeSS3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSelfService_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store branding theme set by admin for Self Service 2.0</description>
        <label>SelfService Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKUrgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceProvider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__costCenter__c</fullName>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCountry_ISO_Code__c</fullName>
        <formula>Physical_Address__r.Country_ISO_Code__c</formula>
        <label>Physical Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState_ISO_Code__c</fullName>
        <formula>Physical_Address__r.State_Province_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical State ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to skip validation rules while uploading or updating records into Salesforce. After updating records please uncheck the field.</description>
        <inlineHelpText>Administrator use only. To know more please read field description.
Do not use this field anywhere including reports.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Business_Objectives_Initiatives__c</fullName>
        <description>List the client’s stated goals or objectives as well as the projects initiated in response to the client’s value drivers.</description>
        <inlineHelpText>List the client’s stated goals or objectives as well as the projects initiated in response to the client’s value drivers.</inlineHelpText>
        <label>Client Business Objectives &amp; Initiatives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Profile__c</fullName>
        <description>User input / defined. [Briefly describe the client’s business and mission statement]</description>
        <inlineHelpText>Briefly describe the client’s business and mission statement</inlineHelpText>
        <label>Client Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type (To Be Deleted)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Consulting Engineer</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Distributor-Contractor</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Installer</fullName>
                </value>
                <value>
                    <fullName>Mechanical Contractor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <description>dcw_Continents.con_name</description>
        <inlineHelpText>dcw_Continents.con_name</inlineHelpText>
        <label>Continent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCW_RGM__c</fullName>
        <inlineHelpText>DCW RGM</inlineHelpText>
        <label>RGM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCW_Region__c</fullName>
        <inlineHelpText>DCW Region Field</inlineHelpText>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_McQuay_Vendor_Number__c</fullName>
        <description>Used to store Daikin Applied Vendor # for this entity.</description>
        <inlineHelpText>Used to store Daikin Applied Vendor # for this entity.</inlineHelpText>
        <label>Vendor #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Notes__c</fullName>
        <description>dcw_DistChannels.dc_dist_notes</description>
        <inlineHelpText>dcw_DistChannels.dc_dist_notes</inlineHelpText>
        <label>Distribution Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if account appears to be a duplicate of another account.</inlineHelpText>
        <label>Duplicate? (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Originally added for to capture Customer Bill To information from the Data Warehouse (Installed Base) for TRC Integration.</description>
        <label>Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Lead_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked as TRUE only if this record is created by Lead conversion.</description>
        <inlineHelpText>This field will be marked as TRUE only if this record is created by Lead conversion.</inlineHelpText>
        <label>From Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for the DSO side of the business</description>
        <inlineHelpText>Indicates this is a high value account. Only include the approximately 10-20% of accounts that produce approximately 80-90% of the results (or has the potential to do so).</inlineHelpText>
        <label>High Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the record pertains to the IE integration. This is set on import of records from Daikin IE Back Office database or IE system.</description>
        <inlineHelpText>If checked, this account has purchased Intelligent Equipment subscription(s) or a contact at this company is an IE system user.</inlineHelpText>
        <label>IE Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <externalId>true</externalId>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Sync_Status__c</fullName>
        <label>IE Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Updated_Date__c</fullName>
        <label>IE Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account has been inactivated</description>
        <inlineHelpText>The Account/Company no longer exists (closed doors, bankruptcy, etc.)</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japanese_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Account is a Japanese Company.</description>
        <inlineHelpText>Check this box if the Account is a Japanese Company.</inlineHelpText>
        <label>Japanese Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Latin America Strategic Account</description>
        <inlineHelpText>Latin America Strategic Account</inlineHelpText>
        <label>LA Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <inlineHelpText>Date this account was last reviewed, augmented or cleaned.</inlineHelpText>
        <label>Last Review Date (Do Not Use)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Won_Opp_Date__c</fullName>
        <description>Displays the Close Date of the most recent closed won opportunity.</description>
        <inlineHelpText>Displays the Close Date of the most recent closed won opportunity.</inlineHelpText>
        <label>Last Won Opp Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Active_DCW__c</fullName>
        <formula>if (AND (Rep_Office_ID__c != null, Location__c != null), 
(Location__c &amp; &quot; / &quot; &amp; if(Active__c = TRUE,&quot;ACTIVE&quot;,&quot;INACTIVE&quot;)), 
if(AND (Rep_Office_ID__c != null, Active__c = TRUE),&quot;ACTIVE&quot;,
if(AND (Rep_Office_ID__c != null, Active__c = FALSE),&quot;INACTIVE&quot;,&quot;&quot;)))</formula>
        <label>Location / Active (DCW)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>dcw_DistChannels.dc_location</description>
        <inlineHelpText>dcw_DistChannels.dc_location</inlineHelpText>
        <label>Location (DCW)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Quantity__c</fullName>
        <inlineHelpText>dcw_DistChannels.dc_mail_qty</inlineHelpText>
        <label>Mail Quantity</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>